SFDC Automation/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Fee_Amount__c</fullName>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Code__c</fullName>
        <label>Fee Code</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Call_Resolution__c</fullName>
        <inlineHelpText>Did you verified all cases to same Major/Sub Category?</inlineHelpText>
        <label>First_Call_Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Historical_Vehicle_Number__c</fullName>
        <description>Used to hold the original value of the Vehicle, should the Vehicle be deleted and break the relationship</description>
        <inlineHelpText>This is the Vehicle Number originally associated with the case.</inlineHelpText>
        <label>Historical Vehicle Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Caller_Type_Other_Title__c</fullName>
        <label>Internal Caller Type - &quot;Other&quot; Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Caller_Type_Title__c</fullName>
        <label>Internal Caller Type - Title</label>
        <picklist>
            <controllingField>Caller_Type__c</controllingField>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Development Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Counter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <formula>Customer_Number__c  &amp;  Sequence_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change__c</fullName>
        <description>Stores the last time the status changed -- used by the Case Business Hours Tools package.</description>
        <label>Last Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <description>As per QC: 639. This field is used on a dashboard.</description>
        <formula>IF(ISBLANK(Requested_Date__c), 0, Proposal_Due_Date__c - Requested_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Case_Close_Date__c</fullName>
        <description>Date when the legal person closed the case</description>
        <inlineHelpText>Date when the legal person closed the case</inlineHelpText>
        <label>Case Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Case_Start_Date__c</fullName>
        <description>Date when the legal person actually started to work on the case</description>
        <inlineHelpText>Date when the legal person actually started to work on the case</inlineHelpText>
        <label>Case Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Length_of_the_Matter__c</fullName>
        <description>calculates the date difference between case close date and case start date to see how many days the legal person took to close the legal case</description>
        <formula>Legal_Case_Close_Date__c - Legal_Case_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates the date difference between case close date and case start date to see how many days the legal person took to close the legal case</inlineHelpText>
        <label>Length of the Matter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lessee_Number__c</fullName>
        <formula>Account.LesseeNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lessee #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Category__c</fullName>
        <label>Major Category</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>A/P:1099 Transfer x6628</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:Check Clear Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:Check Copy/Remittance Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:Chimes-Vendor Referred to VS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:Invoice Mailing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:Location Charged Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:Location Invoice Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:Payment Status - vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:RCRC Invoice Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:RCRC P.O. Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:Vendor Information Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:Vendor Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:W-9 Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P 1099</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Admin Vendor (SSC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Canadian Invoices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Checks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P - Comdata Fuel Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P - Comdata Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Credit Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Drafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Expense Reports - GERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Expense Reports - Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P FIS/Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Invoices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P RCRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Research (WNS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Utilities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Man_Hours__c</fullName>
        <label>Man-Hours</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meeting_Result__c</fullName>
        <label>Meeting Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NAFMM__c</fullName>
        <description>Name of the NAFMM on the account</description>
        <label>NAFMM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_exisiting_Contact_Name__c</fullName>
        <inlineHelpText>Enter Contact&apos;s name here. ONLY use when a Contact cannot be found after searching.</inlineHelpText>
        <label>Non-exisiting Contact Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Resources__c</fullName>
        <label>Number of Resources</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSF_Assigned__c</fullName>
        <label>OSF Assigned to</label>
        <picklist>
            <picklistValues>
                <fullName>Acosta, Eileen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adams, Melissa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adams, Tiffany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aguirre, Coral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alario, Virginia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albertson, Will</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allen, Sabrina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Almeida, Kathryn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anderson, Bradley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andino, Javier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aquilino, Sandi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atkins, Dwayne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin, Gail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aycock, Miranda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bacastow, Rick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barrett, James L (Jim)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Becnel, James</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bekto, Rasima</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bennett, Mark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berberich, Terry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berryhill, Steven</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bien, Michael</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bingham, Dawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackstock, Sarah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blalock, Tina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blevens, Shauna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blitz, Greg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boatman, Pat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boldt, Steven</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bowen, Tamisha</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OSF_Assignment_Date__c</fullName>
        <label>OSF Assignment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OSF_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OSF Assignment</label>
        <referenceTo>OSF_Assignment__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Odd_Amount_Code__c</fullName>
        <label>Odd Amount Code</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <label>Opportunity Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <description>Contains the opportunity owners full name</description>
        <label>Opportunity Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Decision_Maker__c</fullName>
        <label>Original Decision Maker</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Competitor__c</fullName>
        <label>Other Competitor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Name__c</fullName>
        <inlineHelpText>Ryder Contact Ex: DOS, SAC, Account Team Member, etc.</inlineHelpText>
        <label>Other Contact Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overseeing_Attorney__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overseeing Attorney</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pay_Total_Amount__c</fullName>
        <label>Pay Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payee_ID__c</fullName>
        <label>Payee ID</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payee_Name__c</fullName>
        <label>Payee Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_Category__c</fullName>
        <label>Problem Category</label>
        <picklist>
            <picklistValues>
                <fullName>Gaps Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaps and Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Own Taxes Set Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Current 45 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPS Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base Plate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End Billed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 day escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 day escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 day escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 day escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 day escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBC Back up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RydeSmart Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Close Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Escalation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Due_Date__c</fullName>
        <label>Proposal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Turnaround_Time__c</fullName>
        <formula>IF(IsClosed, 
ROUND(ClosedDate - CreatedDate, 0), ROUND((NOW() - CreatedDate),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days Open</inlineHelpText>
        <label>Proposal Turnaround Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposal_Type__c</fullName>
        <label>Proposal Type</label>
        <picklist>
            <picklistValues>
                <fullName>RFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose_of_the_Call__c</fullName>
        <label>Purpose of the check</label>
        <picklist>
            <picklistValues>
                <fullName>Authorization Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backup Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base Plates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impound Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Password Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tires</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tolls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Towing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Void</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Question_Due_Date__c</fullName>
        <label>Question Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Name__c</fullName>
        <label>RFP Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RFP_URL__c</fullName>
        <label>RFP URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Existing Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Problem</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_URL__c</fullName>
        <label>Report URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Reports_to__c</fullName>
        <formula>OSF_Assignment__r.OSF_Reports_to__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OSF Reports to</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resolution_Path__c</fullName>
        <label>Resolution Path</label>
        <picklist>
            <picklistValues>
                <fullName>A/P - Comdata Fuel Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P - Comdata Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P 1099</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Admin Vendor (SSC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Canadian Expense Reports - GERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Canadian Expense Reports - Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Canadian Invoices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Checks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Drafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Expense Reports - GERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Expense Reports - Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P FIS/Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Invoices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P RCRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Research (WNS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Vendor Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Vendor Rightfax Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Analyst - RIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Coordinator&apos;s Canadian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Coordinators US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Parent Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Logs/Rental Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCollections - Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Lease Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choice Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections - Brett&apos;s Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections - Jim&apos;s Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resolution_Team__c</fullName>
        <label>Resolution Team</label>
        <picklist>
            <picklistValues>
                <fullName>A/P - Comdata Fuel Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P - Comdata Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P 1099</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Admin Vendor (SSC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Canadian Expense Reports - GERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Canadian Expense Reports - Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Canadian Invoices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Checks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Drafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Expense Reports - GERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Expense Reports - Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P FIS/Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Invoices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P RCRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Research (WNS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Vendor Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Vendor Rightfax Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Analyst - RIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Coordinator&apos;s Canadian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Coordinators US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Parent Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Logs/Rental Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCollections - Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Lease Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choice Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections - Brett&apos;s Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections - Jim&apos;s Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resources_requeste__c</fullName>
        <label>Resources Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Account Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Fuels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Boarding / Start-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing / Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proximity Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety / Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Integration / Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical / Maintenance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Run_Assign_Rule_From_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Assign Rule From Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ryder_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ryder Branch</label>
        <referenceTo>Ryder_Branch__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ryder_Employee__c</fullName>
        <description>Enter name of the Ryder Employee associated with the case and not found as a Salesforce user in the lookup field</description>
        <label>Ryder Employee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ryder_Sales_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ryder Sales Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Add Salesforce user associated with the case from this lookup</description>
        <label>Salesforce_User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
</CustomObject>